rename to prevent confusion with the defaultgroup app

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
 
 env:
   global:
-    - APP_NAME=nextcloud_defaultgroups
+    - APP_NAME=auto_groups
     - DB=sqlite
   matrix:
     - CORE_BRANCH=stable18
