--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -56,13 +56,10 @@ jobs:
         run: composer i
 
       - name: Set up Nextcloud
-        env:
-          DB_PORT: 4444
         run: |
           mkdir data
-          ./occ maintenance:install --verbose --database=${{ matrix.databases }} --database-name=nextcloud --database-host=127.0.0.1 --database-port=$DB_PORT --database-user=root --database-pass=rootpassword --admin-user admin --admin-pass password 
+          ./occ maintenance:install --verbose --database=${{ matrix.databases }} --database-name=nextcloud --database-user=root --database-pass=rootpassword --admin-user admin --admin-pass password 
           ./occ app:enable ${{ env.APP_NAME }}
-          php -S localhost:8080 &
 
       - name: PHPUnit
         working-directory: apps/${{ env.APP_NAME }}/tests
