--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -20,7 +20,7 @@ jobs:
       matrix:
         php-versions: ['7.2', '7.3', '7.4']
         databases: ['sqlite']
-        server-versions: ['stable-18']
+        server-versions: ['stable18', 'master']
   
     name: php${{ matrix.php-versions }}-${{ matrix.databases }}-${{ matrix.server-versions }}
 
@@ -44,12 +44,12 @@ jobs:
           path: apps/${{ env.APP_NAME }}
 
       - name: Set up php ${{ matrix.php-versions }}
-        uses: shivammathur/setup-php@v1
+        uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
           tools: phpunit
           extensions: mbstring, iconv, fileinfo, intl, sqlite, pdo_sqlite
-          coverage: none
+          coverage: pcov
 
       - name: Set up PHPUnit
         working-directory: apps/${{ env.APP_NAME }}
