--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -20,7 +20,7 @@ jobs:
       matrix:
         php-versions: ['7.3', '7.4']
         databases: ['sqlite']
-        server-versions: ['stable18', 'master']
+        server-versions: ['stable18']
   
     name: php${{ matrix.php-versions }}-${{ matrix.databases }}-${{ matrix.server-versions }}
 
@@ -60,6 +60,9 @@ jobs:
           mkdir data
           ./occ maintenance:install --verbose --database=${{ matrix.databases }} --database-name=nextcloud --database-user=root --database-pass=rootpassword --admin-user admin --admin-pass password 
           ./occ app:enable ${{ env.APP_NAME }}
+
+      - name: Check Syntax
+        run: ./vendor/bin/parallel-lint --exclude vendor .
 
       - name: PHPUnit
         working-directory: apps/${{ env.APP_NAME }}
