--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "require-dev": {
-        "jakub-onderka/php-parallel-lint": "^1.0",
-        "phpunit/phpunit": "^9",
-        "php-coveralls/php-coveralls": "^2.2"
+        "php-parallel-lint/php-parallel-lint": "^1.0",
+        "phpunit/phpunit": "^9"
     }
 }
