--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -78,4 +78,4 @@ jobs:
       - name: Codecov.io Upload
         uses: codecov/codecov-action@v1
         with: 
-          file: apps/${{ env.APP_NAME }}/test/coverage.xml
+          file: apps/${{ env.APP_NAME }}/tests/coverage.xml
