upload raw coverage report

--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -75,14 +75,11 @@ jobs:
         working-directory: apps/${{ env.APP_NAME }}
         run: ./vendor/phpunit/phpunit/phpunit -c tests/phpunit.xml
         
-      - name: List Directory Structure
-        run: ls -la
-      
-      - name: List App Directory Structure
-        run: ls -la apps/${{ env.APP_NAME }}
-      
-      - name: List Tests Directory Structure
-        run: ls -la apps/${{ env.APP_NAME }}/tests
+      - name: Upload raw coverage report
+        uses: actions/upload-artifact@v1
+        with:
+          name: coverage.xml
+          path: papps/${{ env.APP_NAME }}/tests/coverage.xml
 
       - name: Codecov.io Upload
         uses: codecov/codecov-action@v1
