--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -49,7 +49,7 @@ jobs:
           php-version: ${{ matrix.php-versions }}
           tools: phpunit
           extensions: mbstring, iconv, fileinfo, intl, sqlite, pdo_sqlite
-          coverage: none
+          coverage: pcov
 
       - name: Cache Dependencies
         uses: actions/cache@v1
@@ -76,4 +76,5 @@ jobs:
         run: ./vendor/phpunit/phpunit/phpunit -c tests/phpunit.xml
 
       - name: Codecov.io Upload
-        uses: codecov/codecov-action@v1
+        working-directory: apps/${{ env.APP_NAME }}
+        run: bash <(curl -s https://codecov.io/bash) -f tests/coverage.xml 
