--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -77,4 +77,4 @@ jobs:
 
       - name: Codecov.io Upload
         working-directory: apps/${{ env.APP_NAME }}
-        run: bash <(curl -s https://codecov.io/bash) -f tests/coverage.xml 
+        run: bash <(curl -s https://codecov.io/bash) -f tests/coverage.xml -F ${{ matrix.server-versions }} 
