--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -68,6 +68,9 @@ jobs:
           extensions: ${{ env.PHP_EXTENSIONS }}
           coverage: pcov
 
+      - name: Setup problem matchers for PHPUnit
+        run: echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
+
       - name: Get composer cache directory
         id: composer-cache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
@@ -95,7 +98,7 @@ jobs:
 
       - name: Unit and Integration Tests
         working-directory: apps/${{ env.APP_NAME }}
-        run: ./vendor/phpunit/phpunit/phpunit -c tests/phpunit.xml
+        run: phpunit -c tests/phpunit.xml
 
       - name: Codecov.io Upload
         working-directory: apps/${{ env.APP_NAME }}
