--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -11,6 +11,7 @@ env:
   APP_NAME: auto_groups
   PHP_EXTENSIONS: mbstring, iconv, fileinfo, intl, sqlite, pdo_sqlite, pcov
   CACHE_KEY: cache-v1 # can be any string, change to clear the extension cache.
+  TRAVIS: true
 
 jobs:
   php:
