--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -53,6 +53,12 @@ jobs:
           tools: phpunit
           extensions: ${{ env.PHP_EXTENSIONS }}
           coverage: pcov
+      
+      - name: Setup problem matchers for PHP
+        run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
+
+      - name: Setup problem matchers for PHPUnit
+        run: echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
 
       - name: Set up Dependencies
         working-directory: apps/${{ env.APP_NAME }}
