--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -46,6 +46,21 @@ jobs:
         with:
           path: apps/${{ env.APP_NAME }}
 
+      - name: Setup cache environment
+        id: cache-env
+        uses: shivammathur/cache-extensions@v1
+        with:
+          php-version: ${{ matrix.php-versions }}
+          extensions: ${{ env.extensions }}
+          key: ${{ env.key }}
+        
+      - name: Cache extensions
+        uses: actions/cache@v1
+        with:
+          path: ${{ steps.cache-env.outputs.dir }}
+          key: ${{ steps.cache-env.outputs.key }}
+          restore-keys: ${{ steps.cache-env.outputs.key }}
+
       - name: Set up php ${{ matrix.php-versions }}
         uses: shivammathur/setup-php@v2
         with:
@@ -60,9 +75,10 @@ jobs:
       - name: Setup problem matchers for PHPUnit
         run: echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
 
-      - name: Set up Dependencies
-        working-directory: apps/${{ env.APP_NAME }}
-        run: composer install --prefer-dist
+
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
 
       - name: Set up Nextcloud
         run: |
@@ -72,7 +88,7 @@ jobs:
 
       - name: Check Syntax
         working-directory: apps/${{ env.APP_NAME }}
-        run: ./vendor/bin/parallel-lint --exclude vendor .
+        run: composer run lint
 
       - name: Unit and Integration Tests
         working-directory: apps/${{ env.APP_NAME }}
