--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "require-dev": {
-        "php-parallel-lint/php-parallel-lint": "^1.0"
+    "scripts": {
+        "lint": "find . -name \\*.php -not -path './vendor/*' -exec php -l \"{}\" \\;"
     }
 }
