--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -67,7 +67,7 @@ jobs:
           php-version: ${{ matrix.php-versions }}
           tools: phpunit
           extensions: ${{ env.PHP_EXTENSIONS }}
-          coverage: pcov
+          coverage: xdebug
       
       - name: Setup problem matchers for PHP
         run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
