--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -9,8 +9,8 @@ on:
 
 env:
   APP_NAME: auto_groups
-  PHP_EXTENSIONS: mbstring, iconv, fileinfo, intl, sqlite, pdo_sqlite, pcov
-  CACHE_KEY: cache-v2 # can be any string, change to clear the extension cache.
+  PHP_EXTENSIONS: mbstring, iconv, fileinfo, intl, sqlite, pdo_sqlite, xdebug
+  CACHE_KEY: cache-v3 # can be any string, change to clear the extension cache.
   TRAVIS: true
 
 jobs:
