--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,12 +23,16 @@ jobs:
         run: cd ${{ env.APP_NAME }} && rm -rf .git composer.json screenshots tests .github .tx && cd ..
 
       - name: Define Archive Name
-        uses: allenevans/set-env@v1.0.0
-        with:
-          ARCHIVE_NAME: ${{ env.APP_NAME }}.tar.gz # TODO ADD GITHUB_REF
+        run: echo ::set-env name=ARCHIVE_NAME::${{ env.APP_NAME }}.tar.gz # TODO ADD GITHUB_REF
 
       - name: Create Archive
         run: tar -zcvf ${{ env.ARCHIVE_NAME }} ${{ env.APP_NAME }}/
     
       - name: Create Archive Signature
-        run: echo "${{ secrets.AUTO_GROUPS_SIGNING_KEY }}" | openssl dgst -sha512 -sign /dev/stdin  ${{ env.ARCHIVE_NAME }}  | openssl base64
+        run: echo ::set-env name=SIGNATURE::$(echo "${{ secrets.AUTO_GROUPS_SIGNING_KEY }}" | openssl dgst -sha512 -sign /dev/stdin  ${{ env.ARCHIVE_NAME }}  | openssl base64)
+
+      - name: Output Signature
+        run: echo $SIGNATURE
+
+      - name: List files
+        run: ls -la
