correct variable reference

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-            upload_url: https://uploads.github.com/repos/stjosh/${{ env.APP_NAME }}/releases/$GITHUB_REF/assets
+            upload_url: https://uploads.github.com/repos/stjosh/${{ env.APP_NAME }}/releases/${{ env.GITHUB_REF }}/assets
             asset_path: ./${{ env.ARCHIVE_NAME }}
             asset_name: ${{ env.ARCHIVE_NAME }}
             asset_content_type: application/tar+gzip
