--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,11 +40,11 @@ jobs:
       #      asset_content_type: application/tar+gzip
     
       - name: Create Archive Signature
-        run: echo "${{ secrets.AUTO_GROUPS_SIGNING_KEY }}" | openssl dgst -sha512 -sign /dev/stdin  ${{ env.ARCHIVE_NAME }}  | openssl base64 > signature.txt
+        run: echo ::set-env name=ARCHIVE_SIGNATURE::$(echo "${{ secrets.AUTO_GROUPS_SIGNING_KEY }}" | openssl dgst -sha512 -sign /dev/stdin  ${{ env.ARCHIVE_NAME }}  | openssl base64 -A )
 
       - name: Create Publish Payload
         # run: echo "{\"download\": \"${{ steps.upload-release-asset.outputs.browser_download_url }}\", \"signature\": \"$(cat signature.txt | tr -d '\n')\"}" > publish.txt
-        run: run: echo "{\"download\": \"https://test.com/test.tar.gz\", \"signature\": \"$(cat signature.txt | tr -d '\n')\"}" > publish.txt
+        run: echo "{\"download\": \"https://test.com/test.tar.gz\", \"signature\": \"${{ env.ARCHIVE_SIGNATURE }}\"}" > publish.txt
 
       - name: Display Publish Payload
         run: cat publish.txt
