--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,6 @@
 name: Build and Submit to App Store
 
 on:
-  pull_request: # TODO REMOVE
   release:
     types:
       - published
@@ -23,30 +22,27 @@ jobs:
         run: cd ${{ env.APP_NAME }} && rm -rf .git composer.json screenshots tests .github .tx && cd ..
 
       - name: Define Archive Name
-        run: echo ::set-env name=ARCHIVE_NAME::${{ env.APP_NAME }}.tar.gz # TODO ADD GITHUB_REF
+        run: echo ::set-env name=ARCHIVE_NAME::${{ env.APP_NAME }}-${{ github.ref }}.tar.gz
 
       - name: Create Archive
         run: tar -zcvf ${{ env.ARCHIVE_NAME }} ${{ env.APP_NAME }}/
 
-      #- name: Upload Release Asset
-      #  id: upload-release-asset
-      #  uses: actions/upload-release-asset@v1
-      #  env:
-      #      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #  with:
-      #      upload_url: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ github.ref }}/assets
-      #      asset_path: ./${{ env.ARCHIVE_NAME }}
-      #      asset_name: ${{ env.ARCHIVE_NAME }}
-      #      asset_content_type: application/tar+gzip
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+            upload_url: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ github.ref }}/assets
+            asset_path: ./${{ env.ARCHIVE_NAME }}
+            asset_name: ${{ env.ARCHIVE_NAME }}
+            asset_content_type: application/tar+gzip
     
       - name: Create Archive Signature
         run: echo ::set-env name=ARCHIVE_SIGNATURE::$(echo "${{ secrets.AUTO_GROUPS_SIGNING_KEY }}" | openssl dgst -sha512 -sign /dev/stdin  ${{ env.ARCHIVE_NAME }}  | openssl base64 -A )
 
       - name: Create Publish Payload
-        run: "echo '{ \"download\": \"https://test.com/test.tar.gz\", \"signature\": \"${{ env.ARCHIVE_SIGNATURE }}\"}' > publish.txt"
+        run: "echo '{ \"download\": \"${{ steps.upload-release-asset.outputs.browser_download_url }}\", \"signature\": \"${{ env.ARCHIVE_SIGNATURE }}\"}' > publish.json"
 
-      - name: Display Publish Payload
-        run: cat publish.txt
-
-      #- name: Submit to Nextcloud App Store
-      #  run: curl -X POST https://apps.nextcloud.com/api/v1/apps/releases -H "Authorization: Token ${{ secrets.APP_STORE_API_TOKEN }}" -H "Content-Type: application/json" -d '{"download":"${{  }}", "signature": "65e613318107bceb131af5cf8b71e773b79e1a9476506f502c8e2017b52aba15"}'
+      - name: Submit to Nextcloud App Store
+        run: "curl -X POST https://apps.nextcloud.com/api/v1/apps/releases -H 'Authorization: Token ${{ secrets.APP_STORE_API_TOKEN }}' -H 'Content-Type: application/json' -d @publish.json"
