--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,9 @@ jobs:
         
       - name: Define Archive Name
         run: echo ::set-env name=ARCHIVE_NAME::${{ env.APP_NAME }}-${{ steps.set-tag-name.outputs.TAG_NAME }}.tar.gz
+        
+      - name: Get Upload URL
+        run: echo ::set-env name=UPLOAD_URL::$(curl https://api.github.com/repos/${{ github.repository }}/releases | jq '.[] | select(.tag_name == "${{ steps.set-tag-name.outputs.TAG_NAME }}") | .upload_url')
           
       - name: Check version info in info.xml
         run: grep "<version>$(echo ${{ steps.set-tag-name.outputs.TAG_NAME }} | cut -c2-)</version>" ${{ env.APP_NAME }}/appinfo/info.xml
@@ -40,7 +43,7 @@ jobs:
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-            upload_url: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ steps.set-tag-name.outputs.TAG_NAME }}/assets{?name,label}
+            upload_url: ${{ env.UPLOAD_URL }}
             asset_path: ./${{ env.ARCHIVE_NAME }}
             asset_name: ${{ env.ARCHIVE_NAME }}
             asset_content_type: application/tar+gzip
