--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -105,5 +105,5 @@ jobs:
       - name: Codecov.io Upload
         uses: codecov/codecov-action@v1
         with:
-          file: apps/${{ env.APP_NAME }}/test/coverage.xml
+          file: ./apps/${{ env.APP_NAME }}/tests/coverage.xml
           flags: ${{ matrix.server-versions }} 
