--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -100,6 +100,8 @@ jobs:
       - name: Unit and Integration Tests
         working-directory: apps/${{ env.APP_NAME }}
         run: phpunit -c tests/phpunit.xml
+        env:
+          TRAVIS: true 
 
       - name: Codecov.io Upload
         uses: codecov/codecov-action@v1
