--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
       matrix:
         php-versions: ['7.3', '7.4']
         databases: ['sqlite']
-        server-versions: ['stable18', 'stable19']
+        server-versions: ['stable18', 'stable19', 'stable20']
         experimental: [false]
         include:
           - php-versions: '7.4'
