--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -118,7 +118,7 @@ jobs:
 
       - name: Codecov.io Upload
         uses: codecov/codecov-action@v1
-        working-directory: ./apps/${{ env.APP_NAME }}
         with:
+          working-directory: apps/${{ env.APP_NAME }}
           files: ./tests/coverage.xml
           flags: ${{ matrix.server-versions }}
