--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
       matrix:
         php-versions: ['7.3', '7.4', '8.0']
         databases: ['sqlite']
-        server-versions: ['stable18', 'stable19', 'stable20', 'stable21']
+        server-versions: ['stable18', 'stable19', 'stable20', 'stable21', 'stable22']
         experimental: [false]
         include:
           - php-versions: '8.0'
