remove php 7.3 support

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['7.3', '7.4', '8.0']
+        php-versions: ['7.4', '8.0']
         databases: ['sqlite']
         server-versions: ['stable19', 'stable20', 'stable21', 'stable22', 'stable23', 'stable24']
         experimental: [false]
