--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['7.4', '8.0']
+        php-versions: ['7.4', '8.0', '8.1' ]
         databases: ['sqlite']
         server-versions: ['stable19', 'stable20', 'stable21', 'stable22', 'stable23', 'stable24']
         experimental: [false]
@@ -37,6 +37,14 @@ jobs:
             server-versions: 'stable19'
             experimental: false
           - php-versions: '8.0'
+            databases: sqlite
+            server-versions: 'stable20'
+            experimental: false
+          - php-versions: '8.1'
+            databases: sqlite
+            server-versions: 'stable19'
+            experimental: false
+          - php-versions: '8.1'
             databases: sqlite
             server-versions: 'stable20'
             experimental: false
