--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -69,6 +69,7 @@ jobs:
         with:
           repository: nextcloud/server
           ref: ${{ matrix.server-versions }}
+          fetch-depth: 2
 
       - name: Checkout submodules
         shell: bash
@@ -81,6 +82,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: apps/${{ env.APP_NAME }}
+          fetch-depth: 2
 
       - name: Setup cache environment
         id: cache-env
